...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
    android:background="?attr/dialogBackground">

    <View style="?attr/sheetEdgeStrong" />

    <LinearLayout android:id="@+id/dialog_header"
        android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="56dp"
        android:orientation="horizontal" android:gravity="center_vertical|start">

        <Spinner android:id="@+id/type_spin"
            android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
            tools:listitem="@layout/layout_listitem_alarmtype" />

        <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_accept"
            style="?attr/actionOverflowButtonStyle" android:contentDescription="@string/schedalarm_dialog_ok"
            android:layout_width="96dp" android:layout_height="56dp" android:paddingLeft="16dp" android:paddingRight="16dp"
            android:paddingTop="12dp" android:paddingBottom="12dp"
            android:src="?attr/icActionAccept"  android:scaleType="fitCenter"
            android:tint="?attr/text_accentColor" />

    </LinearLayout>

    <com.forrestguice.support.widget.TabLayout
        android:id="@+id/tabLayout"
        android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="32dp"
        android:layout_marginBottom="8dp">

        <com.forrestguice.support.widget.TabItem
            android:id="@+id/tab_event"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/schedalarm_dialog_tab_event" />

        <com.forrestguice.support.widget.TabItem
            android:id="@+id/tab_time"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/schedalarm_dialog_tab_time" />

    </com.forrestguice.support.widget.TabLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer1"
        android:layout_width="match_parent" android:layout_height="wrap_content"
...
    <FrameLayout android:background="?attr/dialogFrame"
        android:layout_width="match_parent" android:layout_height="wrap_content" >

        <include layout="@layout/layout_listitem_alarmtime"
            android:layout_marginTop="8dp" android:layout_height="wrap_content" android:layout_width="match_parent" />

        <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_alarms"
            style="?attr/actionOverflowButtonStyle"
            android:contentDescription="@string/app_name_alarmclock"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="0dp" android:paddingTop="8dp" android:paddingBottom="8dp"
            android:src="@drawable/ic_suntimesalarms" />
...
