...

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/modepicker"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp"
        android:layout_marginLeft="0dp" android:layout_marginRight="8dp"
        android:layout_marginStart="0dp" android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        tools:text="System Time Zone" tools:listitem="@layout/layout_listitem_alarmtz"
        android:nextFocusDown="@+id/locationPicker" android:nextFocusRight="@+id/locationPicker" />

    <TextView
        android:id="@+id/locationPicker" android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content" android:minWidth="250dp"
        android:layout_height="wrap_content" android:minHeight="48dp"
        android:gravity="center_vertical" android:drawablePadding="8dp"
        android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp"
        android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingBottom="4dp"
        android:paddingStart="16dp" android:paddingEnd="16dp"
        android:drawableLeft="?attr/icActionPlace" android:drawableStart="?attr/icActionPlace"
        android:textSize="?attr/text_size_small" tools:text="Location"
        android:nextFocusUp="@+id/modepicker" android:nextFocusLeft="@+id/modepicker"
        android:nextFocusDown="@+id/datePicker" android:nextFocusRight="@+id/datePicker" />

    <TextView
        android:id="@+id/datePicker" android:background="?attr/selectableItemBackground"
        android:layout_width="wrap_content" android:minWidth="250dp"
        android:layout_height="wrap_content" android:minHeight="48dp"
        android:gravity="center_vertical" android:drawablePadding="8dp"
        android:layout_marginLeft="0dp" android:layout_marginRight="0dp"
        android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingTop="4dp" android:paddingBottom="4dp"
        android:paddingStart="16dp" android:paddingEnd="16dp"
        android:drawableLeft="?attr/icActionCalendar" android:drawableStart="?attr/icActionCalendar"
        android:textSize="?attr/text_size_small" tools:text=""
        android:nextFocusUp="@+id/locationPicker" android:nextFocusLeft="@+id/locationPicker"
        android:nextFocusDown="@+id/timepicker" android:nextFocusRight="@+id/timepicker" />

    <TimePicker android:theme="@style/TimePickerStyle"
        android:id="@+id/timepicker"
        android:timePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
