...
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginRight="8dp" android:layout_marginLeft="0dp"
                android:layout_marginEnd="8dp" android:layout_marginStart="0dp">

                <Spinner android:id="@+id/appwidget_schedalarm_mode"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_schedalarm_more"
                    style="?attr/actionOverflowButtonStyle" android:contentDescription="@string/action_options"
                    android:layout_width="wrap_content" android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/appwidget_schedalarm_location" android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical" android:drawablePadding="8dp"
                android:layout_marginLeft="6dp" android:layout_marginRight="6dp" android:paddingLeft="8dp" android:paddingRight="8dp"
                android:drawableLeft="?attr/icActionPlace" android:drawableStart="?attr/icActionPlace"
                android:textSize="?attr/text_size_small" tools:text="Location" />

...
