...
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/item_layout">

        <TextView android:id="@+id/text_label"
            style="@style/SunsetTimeTextView" android:textSize="?attr/text_size_small"
            android:text="@string/timeMode_equinox_vernal" android:labelFor="@+id/text_datetime"
            android:layout_width="@dimen/solsticetable_column0_width"
            android:gravity="start|top" android:layout_gravity="top"
            android:paddingEnd="8dp" android:paddingRight="8dp"
            android:paddingStart="0dp" android:paddingLeft="0dp"
            android:layout_marginTop="0dp" android:layout_marginBottom="0dp"
            android:layout_marginLeft="@dimen/equinoxItem_margin" android:layout_marginStart="@dimen/equinoxItem_margin"
...
